Closed Bug 470703 Opened 16 years ago Closed 16 years ago

-moz-box-ordinal-group should not allow negative values

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: dbaron, Assigned: dbaron)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
-moz-box-ordinal-group currently stores its value as an unsigned integer and handles it as such. However, we accept negative integers when parsing the property, which I think we should not do. (Doing so causes us to fail a bunch of serialization tests because we reserialize -1 as something in scientific notation.) This changes the parsing code to reject negative values.
Attachment #354087 - Flags: superreview?(bzbarsky)
Attachment #354087 - Flags: review?(enndeakin)
Attachment #354087 - Flags: review?(enndeakin) → review+
Attachment #354087 - Flags: superreview?(bzbarsky) → superreview+
Blocks: 377731
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: