Disallow negative values on -moz-box-ordinal-group, since it's stored in an unsigned integer and clearly intended to be only positive.  (Bug 470703)  r=enndeakin  sr=bzbarsky